# scrapy-rotating-proxies

./: pyproject.toml
rotating_proxies/: middlewares.py
