[tool.poetry]
name = "scrapy-rotating-proxies"
version = "0.7.2"
description = "scrapy rotating proxies forked from https://github.com/TeamHG-Memex/scrapy-rotating-proxies"
authors = ["Charles Francisco <charles@leadbook.com>"]
packages = [
    { include = "rotating_proxies", from = "." },
]
readme = "README.rst"
repository = "https://github.com/VentesWorks/scrapy-rotating-proxies"

[tool.poetry.dependencies]
attrs = ">16.0.0"
six = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
